more warnings fixed